in memory impl of get account by id
